# sst-external-element

./: .gitignore  README.md  bootstrap.sh  configure.ac
config/: sst_core_check_install.m4
src/: Makefile  Makefile.am  simpleExternalElement.cc  simpleExternalElement.h
tests/: Makefile.am  simpleElementExample-test-001.py  testsuite_default_sstexternalelement.py
tests/refFiles/: simpleElementExample-test-001.out
