AC_INIT([SST External Element Example],[-dev],[sst@sandia.gov])

AC_PREREQ([2.59])
AC_COPYRIGHT([Copyright National Technology and Engineering Solutions of Sandia (NTESS), 2004-2023])

AC_CONFIG_AUX_DIR([config])
AC_CONFIG_MACRO_DIR([config])
AM_INIT_AUTOMAKE([1.9.6 foreign])
dnl AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
